src/frontend/views/header.css
/* **************************** */
 /* EVERYTHING RELATED TO HEADER */
 /* **************************** */

.navbar {
	opacity: 0%;
}

.logo {
	width: 80px;
	height: 80px;
}

.search_bar {
	height: 50px;
	font-size: 20px;
	font-family: Segoe UI;
	background-color: #F6F1F1;
	color: #5A4E4E;
	border: 1px solid black;
	font-weight: 600;
	letter-spacing: 0.25em;
}

#search_button {
	margin: 0;
	padding: auto;
	border-left: 0;
}
.neeche_button {
	color: white;
}

.profile_picture {
	border-radius: 50%;
	width: 80px;
	height: 80px;
	margin-top: 0;
}
.name {
	align-items: center;
	color:#f1f1f1;
}

/* ********* RIGHT COLUMN ********* */

/* TRENDING EVENTS */

#sort-prompt {
	font-size: 0.8rem;
	display: block;
}

.trending-event-heading {
	font-size: 1.2rem;
	font-weight: 700;
}


.trending-events > a {
	text-decoration: none;
}

/* CHATS */
.chat-pic {
	border-radius: 50%;
	height: 42px;
	width: 42px;
	border: 1px dashed #2a0055;
}

.friend-name {
	font-size: 1rem;
}

.chat-box {
	background-color: #EAEAEA;
	border-bottom: 1px solid #CECECE;
}

.view-all-chats {
	font-size: 0.8rem;
}

.chat-box:hover {
	background-color: rgb(212, 209, 209);
}

/* DROPDOWN MENU */

.dropdown-item {
	color: #2a0055;
}

.dropdown-item:hover {
	background-color: #2a0055;
	color: white;
}

.dropdown-menu {
	border: 1px solid #2a0055;
}

